Clean up imports (#550)